<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewTournamentTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tournament_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textViewTournamentDescription"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewTournamentTitle"
	    android:text="@string/tournament_description" />

	<Switch
	    android:id="@+id/switchFollow"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/textViewTournamentDescription"
	    android:text="@string/tournament_follow" />
   	   
</RelativeLayout>