<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp" >
	    
	   <ImageButton
		    android:id="@+id/buttonShowProfile"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginBottom="20dp"
    		android:background="@drawable/shape_button_main"
    		android:src="@drawable/ic_myprofile"
    		android:contentDescription="@string/text_button_access_profile" />
	   
       <ImageButton
	        android:id="@+id/buttonSearch"
	        android:layout_width="0dp"
	       	android:layout_height="wrap_content"
	    	android:layout_weight="1"
		    android:layout_marginBottom="20dp"
    		android:background="@drawable/shape_button_main"
    		android:src="@drawable/ic_searchplayer"
    		android:contentDescription="@string/text_button_search" />
       
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >
       
	   	<ImageButton
			android:id="@+id/buttonTournamentSchedule"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginBottom="10dp"
			android:background="@drawable/shape_button_main"
	   		android:src="@drawable/ic_calendar"
	   		android:contentDescription="@string/text_button_tournament_schedule" />
	   	   
	    <ImageButton
	        android:id="@+id/buttonGoFFG"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	       	android:layout_marginBottom="10dp"
	   		android:src="@drawable/ic_news"
	   		android:background="@drawable/shape_button_main"
	   		android:contentDescription="@string/text_button_access_FFG_website" />

   	</LinearLayout>
   	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >
    
	    <ImageButton
	        android:id="@+id/buttonUpdating"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	       	android:layout_marginBottom="10dp"
	   		android:background="@drawable/shape_button_main"
	   		android:src="@drawable/ic_news"
	   		android:contentDescription="@string/text_button_updating" />
	    
   	    <ImageButton
	        android:id="@+id/buttonSettings"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	       	android:layout_marginBottom="10dp"
	   		android:background="@drawable/shape_button_main"
	   		android:src="@drawable/ic_settings"
	   		android:contentDescription="settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version_number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewLastMAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update_db"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewLastMAJDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update_db_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
