<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2"
	        android:layout_marginTop="10dp" >
		    
		   <ImageButton
			    android:id="@+id/buttonShowProfile"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
	    		android:background="@drawable/shape_button_main"
	    		android:src="@drawable/ic_myprofile"
	    		android:contentDescription="@string/text_button_access_profile" />
		   
	       <ImageButton
		        android:id="@+id/buttonSearch"
		        android:layout_width="0dp"
		       	android:layout_height="wrap_content"
		    	android:layout_weight="1"
	    		android:background="@drawable/shape_button_main"
	    		android:src="@drawable/ic_searchplayer"
	    		android:contentDescription="@string/text_button_search" />
	       
		</LinearLayout>
		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >
		    
		    <TextView
		        android:id="@+id/textViewProfile"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_access_profile" />
		
		    <TextView
		        android:id="@+id/textViewSearch"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_search" />
	       
		</LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >
	       
		   	<ImageButton
				android:id="@+id/buttonTournamentSchedule"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/shape_button_main"
		   		android:src="@drawable/ic_calendar"
		   		android:contentDescription="@string/text_button_tournament_schedule" />
		   	   
		    <ImageButton
		        android:id="@+id/buttonGoFFG"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		   		android:src="@drawable/ic_news"
		   		android:background="@drawable/shape_button_main"
		   		android:contentDescription="@string/text_button_access_FFG_website" />
	
	   	</LinearLayout>
	   	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >
		    
		    <TextView
		        android:id="@+id/textViewTournaments"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_tournament_schedule" />
		
		    <TextView
		        android:id="@+id/textViewNews"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_access_FFG_website" />
	       
		</LinearLayout>
		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >
	    
		    <ImageButton
		        android:id="@+id/buttonUpdating"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		   		android:background="@drawable/shape_button_main"
		   		android:src="@drawable/ic_refresh"
		   		android:contentDescription="@string/text_button_updating" />
		    
	   	    <ImageButton
		        android:id="@+id/buttonSettings"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		   		android:background="@drawable/shape_button_main"
		   		android:src="@drawable/ic_settings"
		   		android:contentDescription="@string/text_button_settings" />
	
	    </LinearLayout>
	
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2" >
		    
		    <TextView
		        android:id="@+id/textViewUpdating"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_updating" />
		
		    <TextView
		        android:id="@+id/textViewSettings"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginBottom="20dp"
		        android:gravity="center"
		        android:text="@string/text_button_settings" />
	       
		</LinearLayout>
		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal"
	        android:weightSum="3" >
		    
		    <TextView
		        android:id="@+id/textViewVersion"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	        
		        android:layout_weight="1"
		        android:text="version_number"
		        android:layout_gravity="bottom"
		        android:textSize="12sp" />
		
		    <TextView
		        android:id="@+id/textViewLastMAJ"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_gravity="bottom"
		        android:text="@string/last_update_db"
		        android:textSize="12sp" />
		
		    <TextView
		        android:id="@+id/textViewLastMAJDate"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_gravity="bottom"
		        android:text="@string/last_update_db_date"
		        android:textSize="12sp" />
		    
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>
